--- a/analysis/license.Rmd
+++ b/analysis/license.Rmd
@@ -7,15 +7,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-What license are you using for your code? See [choosealicense.com][choose] for
-help deciding. It's a convention to save a file `LICENSE` in the root of your
-Git repo that contains the license text.
+CC BY-NC-SA 4.0
 
-What license are you using for the written content on your site? It is
-traditional to choose a [Creative Commons][cc] license for this type of content.
+Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
 
-[choose]: https://choosealicense.com/
-[cc]: https://creativecommons.org/choose/
-
-How should others cite your work? It's a convention to save a file `CITATION`
-in the root of your Git repo that contains the citation information.
+<https://creativecommons.org/licenses/by-nc-sa/4.0/>
